name:                 volume
version:              0.1.0.0
-- synopsis:             
-- description:          
license:              BSD3
license-file:         LICENSE
author:               Fabian Thorand
maintainer:           f.thorand@gmail.com
copyright:            Copyright (c) 2014 Fabian Thorand
category:             Graphics
build-type:           Simple
-- extra-source-files:  
cabal-version:        >=1.10

library
  exposed-modules:    Numeric.ScalarField
                      Graphics.Volume.MarchingCubes
  other-modules:      Graphics.Volume.MarchingCubesTables
  extensions:         FunctionalDependencies
                    , MultiParamTypeClasses
                    , TypeFamilies
                    , FlexibleInstances
                    , FlexibleContexts
  build-depends:      base >=4.7 && <4.8 
                    , linear >=1.10 && <1.11
                    , vector
                    , lens
  hs-source-dirs:     src
  default-language:   Haskell2010

executable test
  main-is:            Main.hs
  hs-source-dirs:     test
  extensions:         FunctionalDependencies
                    , MultiParamTypeClasses
                    , TypeFamilies
                    , FlexibleInstances
                    , FlexibleContexts
  build-depends:      base >=4.7 && <4.8 
                    , array
                    , GLFW-b
                    , GLUtil
                    , linear >=1.10 && <1.11
                    , mtl
                    , OpenGL
                    , vector
                    , volume
                    , transformers
  default-language:   Haskell2010